# Esp32TableSaw_SL

./: platformio.ini
lib/: lv_conf.h
lib/ui/src/: CMakeLists.txt  NVSHelper.cpp  NVSHelper.h  ScreenKeyPad.cpp  ScreenKeyPad.h  ScreenPosition.cpp  ScreenPosition.h  ScreenStepsParameters.cpp  ScreenStepsParameters.h  StepperMotor.cpp  StepperMotor.h  filelist.txt  helper.cpp  helper.h  ui.c  ui.h  ui_events.c  ui_events.cpp  ui_events.h  ui_events.x  ui_helpers.c  ui_helpers.h
lib/ui/src/components/: ui_comp_hook.c
lib/ui/src/images/: ui_img_1297254713.c  ui_img_2104542103.c  ui_img_478973782.c  ui_img_561644076.c  ui_img_position1_24_white_png.c  ui_img_position2_24_white_png.c  ui_img_position3_24_white_png.c  ui_img_settings_24_png.c  ui_img_settings_fill0_wght400_grad0_opsz24_png.c  ui_img_settings_fill0_wght400_grad0_opsz48_png.c
lib/ui/src/screens/: ui_ScrMove.c  ui_ScrSettings.c
libraries/TFT_eSPI/: User_Setup_Select.h
libraries/TFT_eSPI/User_Setups/: Setup_ILI9341_ESP32.h
libraries/ui/src/: filelist.txt  ui.h  ui_events.c  ui_events.h  ui_helpers.c
libraries/ui/src/images/: ui_img_1297254713.c  ui_img_478973782.c  ui_img_561644076.c  ui_img_position1_24_white_png.c  ui_img_position2_24_white_png.c  ui_img_position3_24_white_png.c  ui_img_settings_fill0_wght400_grad0_opsz24_png.c
libraries/ui/src/screens/: ui_ScrSetStep.c  ui_ScrSettings.c
src/: main.cpp
